--- a/src/moremore/login/kakaoLogin/kakaoLogin.css
+++ b/src/moremore/login/kakaoLogin/kakaoLogin.css
@@ -1,12 +1,13 @@
 .kakao_btn
 {
-  background-image: url("./kakao_login_small.png");
+  background-image: url("./kakao_login_medium_wide.png");
   background-repeat: no-repeat;
   position: absolute;
-  left: 100px;
-  top: 91px;
+  left: 2px;
+  top: 211px;
+  display: inline-block;
   color: transparent;
-  width: 183px;
+  width: 300px;
   height: 45px;
   z-index: 1;
   cursor: pointer;
